<resources>
    <string name="app_name">P2ProyectoSpinner-saulmarquezlara</string>
    <string name="Titulo">Registro de colores</string>
    <string name="agregar">Ir a agregar un color</string>
    <string name="color">Menu Principal</string>
    <string name="Indica">Registra un color</string>
    <string name="crear">Ingresar color</string>
    <string name="Registro1">Agregar color a lista</string>
    <string name="Vista">Ver lista de colores</string>
    <string name="Titulo2">Colores Registrados</string>
    <string name="Menu">Menú Principal</string>
</resources>
